--- a/style.css
+++ b/style.css
@@ -274,14 +274,16 @@
 /* offer end */
 
 /* ourdoctor start */
-.ourdoctorcontainer{
-    gap: 1rem;
+.ourdoctorcontainer {
+    gap: 1.5rem;
     overflow-x: hidden;
+    right: 22px;
 }
+
 .ourdoctorcard {
     flex: 0 0 auto;
     height: 17vh;
-    width: 22.5vw;
+    width: 21.5vw;
 }
 
 .ourdoctorcard img {
@@ -297,4 +299,47 @@
     margin: 0;
 }
 
+#goleft {
+    top: 58px;
+    z-index: 100;
+    left: 58px;
+    width: 25px;
+
+}
+
+#goright {
+    right: 8px;
+    top: 58px;
+    width: 25px;
+    background-color: red;
+    z-index: 100;
+}
+
 /* ourdoctor end */
+
+/* woking start */
+.connectline{
+    border: 1px solid lightgray;
+    width: 25vw;
+    height: 1px;
+    position: relative;
+    top: 24px;   
+}
+/* .symbol{
+        position: relative;
+    border: 1px solid transparent;
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    background: lightgray;
+}
+.symbol i{
+    font-size: 25px;
+    position: absolute;
+    top: 23px;
+    left: 23px;
+    translate: -23% -23%;
+    color: white;
+} */
+
+/* woking end */
